--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             text-align: center;
         }
     </style>
+    <script
+  type="text/javascript"
+  src="//pl28235740.effectivegatecpm.com/4b/a8/99/4ba899c9fe5f7eddd1b8e3002fc5e939.js"
+></script>
 </head>
 <body>
     <div class="center-card">
