--- a/user.html
+++ b/user.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  
   <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,6 +105,9 @@ async function loadAds(){
   });
 }
 </script>
+<a href="https://www.effectivegatecpm.com/waanv1ih?key=84fc22b13229c29b9af37f091983c365">
+    اضغط هنا
+</a>
 
 </body>
 </html>
